--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -77,6 +77,13 @@
   year={1981},
   organization={Elsevier}
 }
+
+@article{fuchs1964mechanics,
+  title={The Mechanics of Aerosol Pergamon},
+  author={Fuchs, NA},
+  journal={New York},
+  year={1964}
+}
 @article{Oberlin1984,
    author = {A Oberlin},
    issn = {0008-6223},
@@ -606,6 +613,29 @@
   year={1996},
   organization={Elsevier}
 }
+
+@article{leung1991simplified,
+  title={A simplified reaction mechanism for soot formation in nonpremixed flames},
+  author={Leung, Kin M and Lindstedt, Rune P and Jones, William P},
+  journal={Combustion and flame},
+  volume={87},
+  number={3-4},
+  pages={289--305},
+  year={1991},
+  publisher={Elsevier}
+}
+
+
+@article{xiong1993formation,
+  title={Formation of agglomerate particles by coagulation and sintering—Part I. A two-dimensional solution of the population balance equation},
+  author={Xiong, Yun and Pratsinis, Sotiris E},
+  journal={Journal of Aerosol Science},
+  volume={24},
+  number={3},
+  pages={283--300},
+  year={1993},
+  publisher={Elsevier}
+}
 @article{appel2000kinetic,
   title={Kinetic modeling of soot formation with detailed chemistry and physics: laminar premixed flames of C2 hydrocarbons},
   author={Appel, J{\"o}rg and Bockhorn, Henning and Frenklach, Michael},
@@ -671,6 +701,14 @@
   year={2002},
   publisher={ACS Publications}
 }
+
+@inproceedings{stouffer2002combustion,
+  title={Combustion particulates mitigation investigation using a well-stirred reactor},
+  author={Stouffer, Scott and Striebich, Richard and Zelina, Joseph and Frayne, Charles},
+  booktitle={38th AIAA/ASME/SAE/ASEE Joint Propulsion Conference \& Exhibit},
+  pages={3723},
+  year={2002}
+}
 @article{zhao2003measurement,
   title={Measurement and numerical simulation of soot particle size distribution functions in a laminar premixed ethylene-oxygen-argon flame},
   author={Zhao, Bin and Yang, Zhiwei and Johnston, Murray V and Wang, Hai and Wexler, Anthony S and Balthasar, Michael and Kraft, Markus},
@@ -722,6 +760,19 @@
   year={2004},
   publisher={Elsevier}
 }
+
+@article{borm2004inhaled,
+  title={Inhaled particles and lung cancer, part B: paradigms and risk assessment},
+  author={Borm, Paul JA and Schins, Roel PF and Albrecht, Catrin},
+  journal={International journal of cancer},
+  volume={110},
+  number={1},
+  pages={3--14},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+
+
 @article{park2005influence,
   title={Influence of surface characteristics of carbon blacks on cure and mechanical behaviors of rubber matrix compoundings},
   author={Park, Soo-Jin and Seo, Min-Kang and Nah, Changwoon},
@@ -892,6 +943,17 @@
   volume={31},
   number={1},
   pages={851--860},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{manzello2007soot,
+  title={Soot particle size distributions in a well-stirred reactor/plug flow reactor},
+  author={Manzello, Samuel L and Lenhert, David B and Yozgatligil, Ahmet and Donovan, Michael T and Mulholland, George W and Zachariah, Michael R and Tsang, Wing},
+  journal={Proceedings of the Combustion Institute},
+  volume={31},
+  number={1},
+  pages={675--683},
   year={2007},
   publisher={Elsevier}
 }
@@ -1247,6 +1309,16 @@
   publisher={Elsevier}
 }
 
+
+@article{nichols2013systematic,
+  title={Systematic review of the effects of black carbon on cardiovascular disease among individuals with pre-existing disease},
+  author={Nichols, Jennifer L and Owens, Elizabeth Oesterling and Dutton, Steven J and Luben, Thomas J},
+  journal={International Journal of Public Health},
+  volume={58},
+  pages={707--724},
+  year={2013},
+  publisher={Springer}
+}
 
 @article{myhre2014anthropogenic,
   title={Anthropogenic and natural radiative forcing},
@@ -1659,6 +1731,36 @@
   year={2017},
   publisher={Elsevier}
 }
+
+@article{niranjan2017toxicological,
+  title={The toxicological mechanisms of environmental soot (black carbon) and carbon black: focus on oxidative stress and inflammatory pathways},
+  author={Niranjan, Rituraj and Thakur, Ashwani Kumar},
+  journal={Frontiers in immunology},
+  volume={8},
+  pages={763},
+  year={2017},
+  publisher={Frontiers Media SA}
+}
+
+@article{li2017experimental,
+  title={Experimental comparison of methane pyrolysis in thermal plasma},
+  author={Li, Tianyang and Rehmet, Christophe and Cheng, Yan and Jin, Yong and Cheng, Yi},
+  journal={Plasma Chemistry and Plasma Processing},
+  volume={37},
+  pages={1033--1049},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{patlolla2023review,
+  title={A review of methane pyrolysis technologies for hydrogen production},
+  author={Patlolla, Shashank Reddy and Katsu, Kyle and Sharafian, Amir and Wei, Kevin and Herrera, Omar E and M{\'e}rida, Walter},
+  journal={Renewable and Sustainable Energy Reviews},
+  volume={181},
+  pages={113323},
+  year={2023},
+  publisher={Elsevier}
+}
 @article{kholghy2018reactive,
   title={Reactive polycyclic aromatic hydrocarbon dimerization drives soot nucleation},
   author={Kholghy, Mohammad R and Kelesidis, Georgios A and Pratsinis, Sotiris E},
@@ -1721,6 +1823,13 @@
   pages={997--1000},
   year={2018},
   publisher={American Association for the Advancement of Science}
+}
+
+@book{donnet2018carbon,
+  title={Carbon black: science and technology},
+  author={Donnet, Jean-Baptiste},
+  year={2018},
+  publisher={Routledge}
 }
 
 @article{schiener2019transported,
@@ -2113,6 +2222,16 @@
   journal={Chemical Engineering Research and Design},
   volume={198},
   pages={403--412},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{gleason2023soot,
+  title={Soot nucleation in diffusion flames and the role of aromatic hydrocarbons},
+  author={Gleason, Kevin and Gomez, Alessandro},
+  journal={Combustion and Flame},
+  volume={255},
+  pages={112899},
   year={2023},
   publisher={Elsevier}
 }
