--- a/main.tex
+++ b/main.tex
@@ -8,9 +8,10 @@
 \include{Includes/title}
 \maketitle
 % ------------------------------------------------------------ %
-\include{Includes/introduction}
-%\include{Includes/theory}
-\include{Includes/results/validation}
+\input{Includes/introduction}
+\input{Includes/theory}
+\input{Includes/results/validation}
+\input{Includes/results/shocktube}
 % ------------------------------------------------------------ %
 \clearpage
 \bibliography{Includes/Bibliography/all.bib}
