--- a/Includes/results/validation.tex
+++ b/Includes/results/validation.tex
@@ -142,11 +142,19 @@ Figure~\ref{fig:constuvvalid} demonstrates the relative error of total carbon, h
 Methane pyrolysis in an adiabatic flow reactor is used to check elemental carbon and hydrogen, and energy balance in the PFR model. The inlet flow enters the reactor at the composition of 30\% $\mathrm{CH_4}$ diluted in $\mathrm{N_2}$, and T=2100 K and P=1 atm. Figure~\ref{fig:pfrvalid} shows the residual of total elemental carbon and hydrogen, and energy up to 40 cm of the reactor length using all PAH growth and particle dynamics model. The residuals are in the order of $10^{-11}$ and start to grow at the beginning of the reactor by pyrolysis of $\mathrm{CH_4}$ and the formation of intermediate species such and $\mathrm{C_2H_2}$ and PAHs. This initiates soot inception of surface growth affecting the gas chemistry and energy that ends near x=10 cm, and then the coagulation of particles is dominant with no affect on mass and energy of particles. As a result, PFR model of omnisoot satisfied the conservation of the mass and energy.
 
 
-
-
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{Figures/Results/Validation/PFR/relerr_pfr.pdf}
 	\caption{The relative error (residual) of total carbon (red line) and hydrogen (green line) mass, and total internal energy residual of gas and soot (blue line) plotted against reactor length (cm) in the adiabatic flow reactor during pyrolysis of 30\% $\mathrm{CH_4}$-$\mathrm{N_2}$ at 2100 K and 1 atm simulated using different PAH growth models and MPBM (solid line) and SPBM (dashed line)}
 	\label{fig:pfrvalid}
+\end{figure}
+
+\subsection{Perfectly Stirred Reactor}
+The mass and energy balance are investigated for soot formation during ethylene-air oxidation at $\phi=2$ in a perfectly stirred reactor. The simulation conditions were chosen based on the combustor implemented and utilized by \citet{stouffer2002combustion}. The reactants initially at 300 K enter a reactor of 250 ml that works under atmospheric pressure. The simulation is initialized from a high temperature (~2000 K) to avoid trivial solution (cold reactant leaving the reactor with no chemical reactions) and to ensure the model captures a sustained combustion. The residence time of products in the reactor is 8.5 ms. Figure~\ref{fig:psrvalid} shows the relative error of total elemental carbon and hydrogen mass and total enthalpy of gas and soot, which is less than $10^{-6}$ for all combinations of particle dynamics and PAH growth models.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{Figures/Results/Validation/PSR/relerr_psr.pdf}
+	\caption{The relative error (residual) of total carbon (red line) and hydrogen (green line) mass, and total internal energy residual of gas and soot (blue line) plotted in simulation time during adiabatic combustion of $\mathrm{C_2H_4}$-air with $\phi=2$ 1 atm simulated using different PAH growth models and MPBM (solid line) and SPBM (dashed line)}
+	\label{fig:psrvalid}
 \end{figure}
