--- a/Includes/results/validation.tex
+++ b/Includes/results/validation.tex
@@ -150,6 +150,7 @@ Methane pyrolysis in an adiabatic flow reactor is used to check elemental carbon
 \end{figure}
 
 \subsection{Perfectly Stirred Reactor}
+\label{sec:psrvalid}
 The mass and energy balance are investigated for soot formation during ethylene-air oxidation at $\phi=2$ in a perfectly stirred reactor. The simulation conditions were chosen based on the combustor implemented and utilized by \citet{stouffer2002combustion}. The reactants initially at 300 K enter a reactor of 250 ml that works under atmospheric pressure. The simulation is initialized from a high temperature (~2000 K) to avoid trivial solution (cold reactant leaving the reactor with no chemical reactions) and to ensure the model captures a sustained combustion. The residence time of products in the reactor is 8.5 ms. Figure~\ref{fig:psrvalid} shows the relative error of total elemental carbon and hydrogen mass and total enthalpy of gas and soot, which is less than $10^{-6}$ for all combinations of particle dynamics and PAH growth models.
 
 \begin{figure}[H]
