--- a/Includes/theory.tex
+++ b/Includes/theory.tex
@@ -561,10 +561,10 @@ Coagulation redistributes the total number of agglomerates and primary particles
 	\left(
 		1-\frac{\delta_{jk}}{2}
 	\right)
-	\eta_{ijk}\beta^{jk}N^j_{agg}N^k_{agg}
+	\eta_{ijk}\zeta^{jk}\beta^{jk}N^j_{agg}N^k_{agg}
 	-
 	N^i_{agg}
-	\sum_{k=1}^{n_{sec}}\beta^{im}N^m_{agg}
+	\sum_{k=1}^{n_{sec}}\zeta^{im}\beta^{im}N^m_{agg}
 	\label{eqn:IcoagNaggsect}.
 \end{equation}
 
@@ -575,10 +575,10 @@ Coagulation redistributes the total number of agglomerates and primary particles
 	\left(
 	1-\frac{\delta_{jk}}{2}
 	\right)
-	\eta_{p,ijk}\eta_{ijk}\beta^{jk}N^j_{agg}N^k_{agg}
+	\eta_{p,ijk}\eta_{ijk}\zeta^{jk}\beta^{jk}N^j_{agg}N^k_{agg}
 	-
 	N^i_{pri}
-	\sum_{k=1}^{n_{sec}}\beta^{im}N^m_{agg}
+	\sum_{k=1}^{n_{sec}}\zeta^{im}\beta^{im}N^m_{agg}
 	\label{eqn:IcoagNprisect}.
 \end{equation}
 
@@ -589,10 +589,10 @@ Coagulation redistributes the total number of agglomerates and primary particles
 	\left(
 	1-\frac{\delta_{jk}}{2}
 	\right)
-	\eta_{h,ijk}\eta_{ijk}\beta^{jk}N^j_{agg}N^k_{agg}
+	\eta_{h,ijk}\eta_{ijk}\zeta^{jk}\beta^{jk}N^j_{agg}N^k_{agg}
 	-
 	H^i_{tot}
-	\sum_{k=1}^{n_{sec}}\beta^{im}N^m_{agg}
+	\sum_{k=1}^{n_{sec}}\zeta^{im}\beta^{im}N^m_{agg}
 	\label{eqn:IcoagHtotsect}.
 \end{equation}
 \noindent where ${\delta_{jk}}$ is the Kronecker delta defined as:
