--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,9 @@
 \input{Includes/introduction}
 \input{Includes/theory}
 \input{Includes/results/validation}
+\input{Includes/results/effectparticle}
+\input{Includes/results/psr}
+\input{Includes/results/pfr}
 \input{Includes/results/shocktube}
 % ------------------------------------------------------------ %
 \clearpage
