--- a/Includes/Bibliography/_ref_2009.bib
+++ b/Includes/Bibliography/_ref_2009.bib
@@ -106,3 +106,14 @@
   publisher={Springer}
 }
 
+
+@article{lenhert2009effects,
+  title={Effects of benzene and naphthalene addition on soot inception in a well-stirred reactor/plug flow reactor},
+  author={Lenhert, David B and Manzello, Samuel L},
+  journal={Proceedings of the Combustion Institute},
+  volume={32},
+  number={1},
+  pages={657--664},
+  year={2009},
+  publisher={Elsevier}
+}
