--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -1099,6 +1099,17 @@
 }
 
 
+@article{lenhert2009effects,
+  title={Effects of benzene and naphthalene addition on soot inception in a well-stirred reactor/plug flow reactor},
+  author={Lenhert, David B and Manzello, Samuel L},
+  journal={Proceedings of the Combustion Institute},
+  volume={32},
+  number={1},
+  pages={657--664},
+  year={2009},
+  publisher={Elsevier}
+}
+
 @article{Palomares2010,
    author = {Verónica Palomares and Aintzane Goñi and Izaskun Gil De Muro and Iratxe De Meatza and Miguel Bengoechea and Igor Cantero and Teófilo Rojo},
    issn = {0378-7753},
@@ -1937,6 +1948,16 @@
   journal={Journal of Quantitative Spectroscopy and Radiative Transfer},
   volume={225},
   pages={180--205},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{mei2019quantitative,
+  title={Quantitative measurement of particle size distributions of carbonaceous nanoparticles during ethylene pyrolysis in a laminar flow reactor},
+  author={Mei, Junyu and Wang, Mengda and You, Xiaoqing and Law, Chung K},
+  journal={Combustion and Flame},
+  volume={200},
+  pages={15--22},
   year={2019},
   publisher={Elsevier}
 }
