--- a/Includes/results/pfr.tex
+++ b/Includes/results/pfr.tex
@@ -3,6 +3,13 @@ The PFR model was used to simulate the pyrolysis of \%0.6 $\mathrm{C_2H_4-N_2}$ 
 
 \begin{figure}[H]
 	\centering
+	\includegraphics[width=1\textwidth]{Figures/Results/PFR/temperature.pdf}
+	\caption{The centerline temperature along the reactor for Q=8 (a), 11 (b), and 12 L/min (c) interpolated from the thermocouple measurements~\citep{mei2019quantitative}. The yellow area represent the region with temperature larger than 1200 K.}
+	\label{fig:pfr_temp} 
+\end{figure}
+
+\begin{figure}[H]
+	\centering
 	\begin{tikzpicture}
 		\draw (0, 0) node[inner sep=0] 	{\includegraphics[width=1\textwidth]{Figures/Results/PFR/PSD_diffQ.pdf}};
 		\draw (-3.05, -1.1) node {\tiny{\cite{mei2019quantitative}}};
